2015-03-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex_parser_utils.c: Fix a bug in
	synctex_bool_t synctex_ignore_leading_dot_slash_in_path().
	From Noriyuki Abe (2015-03-23).

2015-03-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex_parser_utils.c: Use WIN32API PathFindFileName() and
	PathFindExtension() for last_component and last_extension, respectively,
	in _synctex_strip_last_path_extension(), in order to support multi-byte
	characters in SyncTeX applications (win32 only).
	From Noriyuki Abe (2015-03-22).

2015-03-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Avoid minor memory leaks (win32 only).

2015-03-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Support multi-byte characters in file names in SyncTeX
	for (e)upTeX (win32 only).

2015-03-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/synctex.a, am/synctex.am: Reorganize rules for libsynctex.

2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c: Define SYNCTEX_YES as 1, not -1 (for bitfields).

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_parser.c: Declare functions with file scope as static.
	* synctex.test (new): Shell script for a simple test.
	* am/synctex.am: Added the new test.

2014-08-04  Sebastian Ramacher  <sramacher@debian.org>

	* synctex_parser.c (_synctex_open): Avoid memory leak,

2014-07-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: Build libsynctex as possibly shared library.
	  From Sebastian Ramacher <sramacher@debian.org>.

2014-07-22  Khaled Hosny  <khaledhosny@eglug.org>

	* am/synctex.am: Don't apply synctex-e-mem.ch0 to XeTeX, and replace
	synctex-e-rec.ch0 with synctex-xe-rec.ch0, after TeX--XeT removal.
	* synctex-xe-rec.ch0: New file (adapted from synctex-e-rec.ch0).

2014-01-14  Sebastian Ramacher  <sramacher@debian.org>

	* synctex_main.c: Bug fix (segfault).

2013-02-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Simplify SyncTeX change files.